specification/specs/common_abstractions/response/ResponseBase.ts
class ResponseBase {
  // error: MainError;
  // status: integer;
}
